[package]
name = "crate-redeem-in-kind"
version = "0.3.1"
description = "In-kind distributions for redeeming Crate assets."
edition = "2021"
homepage = "https://crate.so"
repository = "https://github.com/CrateProtocol/crate"
authors = ["Jen Zhang <jen@crate.so>"]
license = "AGPL-3.0"
keywords = ["solana", "crate"]

[lib]
crate-type = ["cdylib", "lib"]
name = "crate_redeem_in_kind"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
crate-token = { path = "../crate-token", version = "0.3.0", features = ["cpi"] }
static-pubkey = "^1.0.2"
vipers = "1.5.5"
num-traits = "0.2"
