[package]
name = "crate-token"
version = "0.6.0"
description = "Fractional ownership of a basket of fungible assets."
edition = "2021"
homepage = "https://crate.so"
repository = "https://github.com/CrateProtocol/crate"
authors = ["Jen Zhang <jen@crate.so>"]
license = "AGPL-3.0"
keywords = ["solana", "crate"]

[lib]
crate-type = ["cdylib", "lib"]
name = "crate_token"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24"
anchor-spl = "^0.24"
static-pubkey = "^1.0.3"
vipers = "^2"
num-traits = "0.2"
